--- a/Mercadinho/nbproject/private/private.properties
+++ b/Mercadinho/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\Gabrielly Sousa\\AppData\\Roaming\\NetBeans\\26\\build.properties
