--- a/Mercadinho/nbproject/project.properties
+++ b/Mercadinho/nbproject/project.properties
@@ -33,13 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Mercadinho
 excludes=
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\Gabrielly Sousa\\Downloads\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\Administrator\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.2.0.jar-1=E:\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar-1}
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Mercadinho
-main.class=
+main.class=view.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
